# internal/core/brand/dto/brand_dashboard_filter.go
@@ -1,0 +1,10 @@
+package dto
+
+type BrandDashboardFilter struct {
+	Search    string
+	Page      int
+	Limit     int
+	BrandIDs  []uint64
+	DateStart string
+	DateStop  string
+}
